[package]
name = "ByteStore"
version = "0.1.0"
edition = "2024"
description = "A persistent log-structured key-value store with CLI"
 
[[bin]]
name = "kvs"
path = "src/main.rs"
 
[dependencies]
clap = { version = "=4.4.18", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "=1.0.56"
log = "0.4"
env_logger = "=0.10.2"

